# podsync

./: .gitignore  AGENTS.md  Makefile  README.md  SKILL.md
.agents/plans/: 2026-02-13-refactor.md  rust-rewrite.md
.agents/skills/podsync/: SKILL.md
.agents/skills/podsync-voice-tracks/: SKILL.md
.agents/skills/podsync-voice-tracks/references/: ALGORITHM.md  DEPENDENCIES.md
.agents/skills/podsync/assets/: example-output.txt
.agents/skills/podsync/references/: DESIGN.md  TROUBLESHOOTING.md
.claude/: plans
references/: ALGORITHM.md  DEPENDENCIES.md  DESIGN.md  TROUBLESHOOTING.md
scripts/: Cargo.toml  podsync
scripts/src/: .gitignore  audio.rs  main.rs  mfcc.rs  pyproject.toml  sync.rs  vad.rs
scripts/src/podsync/: __init__.py  audio.py  cli.py  sync.py  vad.py
scripts/src/tests/: __init__.py  test_audio.py  test_cli.py  test_integration.py  test_sync.py  test_vad.py
