[package]
name = "podsync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "aiff", "pcm", "flac", "ogg", "vorbis", "wav"] }
rubato = "1.0"
audioadapter-buffers = "2.0"
hound = "3.5"
webrtc-vad = "0.4"
realfft = "3.5"

[dev-dependencies]
tempfile = "3"
