[project]
name = "podsync"
version = "0.1.0"
description = "Synchronize multi-track podcast recordings to a master track"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "setuptools<82",
]

[project.scripts]
podsync = "podsync.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
